Remove lix, use submodules

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,33 @@
 **/.tmp/*
 **/dist/*
-**/bin/*
 *.blend[1-9]
 *.pak
-.vscode/*
 hide-plugin.js
 hide-plugin.js.map
 log.txt
 out/*
 hxd.fmt.pak.Build.hl
 dump/decoding_error.txt
-**/res/spr/*
 **/res/mdl/*
 imgui.ini
 *.log
 res/maps/autosave
 res/bsp/
 NodeEditor.json
+*.prof
+.cache
+wwise
+source assets/audio
+save/*.sav
+cerastesToolState.sav
+dump/*
+settings.def
+.haxelib/*
+tools/haxe/*
+tools/neko/*
+tools/hl/*
+tools/haxe_installed.json
+.vscode/*
+bin/*
 tools/*
-res/game.fgd
+game.fgd
